[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
dotenvy = "0.15.7"
futures = "0.3.31"
mongodb = "3.2.3"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45", features = ["full"] }
tower-http = { version = "0.6.4", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
urlencoding = "2.1.3"
